<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_pin_label"/>

    <EditText
        android:id="@+id/pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:inputType="number"/>

    <Button
        android:id="@+id/new_traffic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user"/>

    <Button
        android:id="@+id/add_traffic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_pin_button"/>

    <Button
        android:id="@+id/start_balance_manager"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_BM"/>

</LinearLayout>